# MiniCarSteer

./: .coveragerc  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  build.sh  launch.sh  requirements.txt
datasets/: analyzer.py  car.1.steering.txt  car.1.velocity.txt  car.2.steering.txt  car.2.velocity.txt  car.3.steering.txt  car.3.velocity.txt  car.4.steering.txt  car.4.velocity.txt  car.5.steering.txt  car.5.velocity.txt  car.6.steering.txt  car.6.velocity.txt  rf.py
docs/llm-discussions/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
docs/performance reports/: MissingFive.report.md  Thor.report.md  hildegard.report.md  tesla.report.md
python-ml/: README.md  app.py  predict.py  requirements.txt  toyota.report.md
python-ml/datasets/: car.1.mag.z.txt  car.2.heading.txt  car.4.acceleration.y.txt  car.4.mag.z.txt
python-ml/gym/: rf.py
python-ml/models/: Tesla-feature.joblib
python-portable/: OD4Session.py  app.py  requirements.txt  steering_prediction_model.pkl
scripts/: build.sh  coverage.sh  fetch_rec.sh  init_h264-decoder.sh  init_opendlv.sh  launch.sh  run.sh
src/: PrimeChecker.cpp  README.md  TestPrimeChecker.cpp  app.py  frameData.py  helloworld.cpp  hildegard.report.md  main.cpp  predict.py  read_car_data.cpp  tesla.report.md  zones.hpp
src/cone_detection/: cone_detector.cpp  cone_detector.hpp
src/datasets/: README.md  car.1.txt  (+9 more)
(+78 files in other folders)
